RESOLVED FIXED103700
When animating mask-postion on a composited layer, element renders incorrectly
https://bugs.webkit.org/show_bug.cgi?id=103700
Summary When animating mask-postion on a composited layer, element renders incorrectly
Simon Fraser (smfr)
Reported 2012-11-29 18:23:37 PST
When animating mask-postion on a composited layer, element renders incorrectly
Attachments
Patch (8.65 KB, patch)
2012-11-29 18:29 PST, Simon Fraser (smfr)
no flags
Patch (9.79 KB, patch)
2012-11-30 15:10 PST, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2012-11-29 18:29:33 PST
WebKit Review Bot
Comment 2 2012-11-29 19:58:46 PST
Comment on attachment 176881 [details] Patch Attachment 176881 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/15062148 New failing tests: compositing/masks/simple-composited-mask.html compositing/masks/masked-ancestor.html
Simon Fraser (smfr)
Comment 3 2012-11-30 15:07:57 PST
I can't reproduce those image failures locally.
Simon Fraser (smfr)
Comment 4 2012-11-30 15:10:47 PST
WebKit Review Bot
Comment 5 2012-11-30 15:12:42 PST
Attachment 177033 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/comp..." exit_code: 1 LayoutTests/platform/chromium/TestExpectations:235: Path does not exist. [test/expectations] [5] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 6 2012-12-03 00:53:05 PST
Comment on attachment 177033 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=177033&action=review > Source/WebCore/rendering/RenderLayer.h:581 > + DontConstrainForMask = 1 << 4, I think I've been told to use DoNot, but it seems pretty up in the air if you search the codebase.
Simon Fraser (smfr)
Comment 7 2012-12-03 13:20:47 PST
Simon Fraser (smfr)
Comment 8 2012-12-03 13:21:20 PST
Note You need to log in before you can comment on or make changes to this bug.